# fungi-server

./: .env  .gitignore  Cargo.toml  deny.toml  diesel.toml
api/: .graphqlconfig  mutation.graphql  schema.graphql
migrations/2020-10-20-122429_create_user/: down.sql  up.sql
migrations/2020-10-20-132134_create_project/: down.sql  up.sql
migrations/2020-10-20-133249_create_animation/: down.sql  up.sql
migrations/2020-12-03-170936_comment/: down.sql  up.sql
migrations/2020-12-03-173619_Like/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs
src/actor/: db.rs  mod.rs  mongo.rs  postgres.rs  repository.rs  session.rs  ws.rs
src/application/: app_state.rs  config.rs  configuration.rs  database.rs  descriptor.rs  mod.rs
src/middleware/: auth_service.rs  crypto_service.rs  mod.rs
src/middleware/graphql/: mod.rs  mutation.rs  query.rs  schema.rs  subscription.rs
src/model/: client.rs  mod.rs  project.rs  schema.rs
src/model/mongo/: get_project.rs  input_project.rs  mod.rs
src/model/postgre/: client.rs  mod.rs  plugin.rs  project.rs  schema.rs
src/route/: handler.rs  mod.rs
src/routes/: projects.rs  sign_in.rs  sign_up.rs
src/utils/: mod.rs  responce.rs
static/: Autorization.html
static/styles/: style.css
tests/: mod.rs
