[package]
name = "server"
version = "0.1.0"
authors = ["K0R0VA <yarykov.m@edu.narfu.ru>"]
edition = "2018"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.6.0"
actix = "0.10.0"
actix-web = "3.0"
actix-web-actors = "3.0.0"
serde_derive = "1.0.116"
serde_json = "1.0.57"
serde =  "1.0"
r2d2 = "0.8.9"
dotenv = "0.15.0"
failure = "0.1.8"
jsonwebtoken = "7.2.0"
lazy_static = "1.4.0"

[dependencies.futures]
version = "0.3.6"
features = ["compat"]

[dependencies.validator]
version = "0.11.0"
features = ["derive"]

[dependencies.argonautica]
version = "0.2"
features = ["simd"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.uuid]
version = "0.6"
features = ["serde", "v4"]

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "uuid", "r2d2", "chrono"]



