[package]
name = "server"
version = "0.1.0"
authors = ["K0R0VA <yarykov.m@edu.narfu.ru>"]
edition = "2018"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 3
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix
actix = "0.10"
actix-web = "3.2.0"
actix-files = "0.4.0"

#other
serde = "1.0.117"
r2d2 = "0.8.9"
dotenv = "0.15.0"
juniper = { git = "https://github.com/graphql-rust/juniper.git" }

[dependencies.futures]
version = "0.3.8"
features = ["compat"]

[dependencies.validator]
version = "0.11.0"
features = ["derive"]

[dependencies.argonautica]
version = "0.2.0"
features = ["simd"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.8.1"
features = ["serde", "v4"]

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "uuidv07", "r2d2", "chrono"]



