

[package]
name = "server"
version = "0.1.0"
authors = ["K0R0VA <yarykov.m@edu.narfu.ru>"]
edition = "2018"

[profile.release]
opt-level = 3

[profile.dev]
opt-level = 0

[profile.dev.package."*"]
opt-level = 0
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#actix
actix = "0.10.0"
actix-web = "3.3.2"
actix-files = "0.4.1"


#other
serde = "1.0.118"
r2d2 = "0.8.9"
dotenv = "0.15.0"
juniper = { git = "https://github.com/graphql-rust/juniper.git" }
mongodb = "1.1.1"
bson = "1.1.0"
google-drive3 = "*"
yup-oauth2 = "5.0.1"

[dependencies.futures]
version = "0.3.8"
features = ["compat"]

[dependencies.validator]
version = "0.12.0"
features = ["derive"]

[dependencies.argonautica]
version = "0.2.0"
features = ["simd"]

[dependencies.chrono]
version = "0.4.19"
features = ["serde"]

[dependencies.uuid]
version = "0.8.1"
features = ["serde", "v4"]

[dependencies.diesel]
version = "1.4.5"
features = ["postgres", "uuidv07", "r2d2", "chrono"]



